kubernetes/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-ingress
  namespace: secure-platform
spec:
  podSelector:
    matchLabels:
      app: secure-platform-app
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
